# src/v1/routes/admins/profile.route.js
@@ -1,0 +1,12 @@
+const { Router } = require('express')
+const bodyParser = require('body-parser')
+const router = Router()
+router.use(bodyParser.urlencoded({ extended: true }))
+router.use(bodyParser.json())
+
+const { admins } = require('../../controllers')
+
+router.get('/', admins.profile.findOne)
+router.put('/', admins.profile.update)
+
+module.exports = router
